# federated_learning_uart

./: .cproject  .gitignore  .project  app.c  app_fl.c  app_fl.h  app_iostream_usart.c  app_iostream_usart.h  federated_learning_over_usart.pintool  federated_learning_over_usart.slcp  federated_learning_over_usart.slps  main.c  readme.md  uart_data_handlers.c  uart_data_handlers.h  vscode.conf
.pdm/: uc.module.setup.componentSetup.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj  uc.module.setup.ucConfig.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj
autogen/: .crc_config.crc  sl_component_catalog.h  sl_event_handler.c
config/: pin_config.h  sl_iostream_usart_vcom_config.h  sl_uartdrv_usart_vcom_config.h
federated_learning_over_usart_cmake/: CMakeLists.txt  CMakePresets.json  federated_learning_over_usart.cmake  federated_learning_over_usart_project.cmake
host_app/: LinearDataset.py  Peripheral.py  SerialInterface.py  TrainingHost.py  UartPeripheral.py  UartProtocol.py  generate_dataset.py  host.py  main.py
host_app/dataset/: LinearDataset.py
host_app/datasets/: LinearDataset.py
